--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -1,11 +1,21 @@
+@import './header.scss';
+
+:root {
+  --color-page-background: #fff;
+  --color-main-brown: #DF800C;
+  --color-main-backgroud: #F9F9F9;
+  --color-main-text: #B8B8B8;
+  --color-logo-main: #0BBCE3;
+}
+
 html {
-  font: 300 62.5% "Aeonik", sans-serif;
+  font: 300 62.5% "Lora", sans-serif;
 }
 
 body {
   margin: 0;
+  padding: 0;
   font-family:
-    'Menlo',
     -apple-system,
     BlinkMacSystemFont,
     'Segoe UI',
@@ -19,7 +29,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 20px;
   color: black;
   font-size: 1.4rem;
 }
