--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -53,3 +53,19 @@ code {
 .btn-hover-effect:hover {
   transform: scale(0.96);
 }
+
+.link-hover-effect::after {
+  content: '';
+  position: absolute;
+  background-color: currentColor;
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: 0;
+  transform: scale(0, 1);
+  transition: transform 0.2s ease;
+}
+
+.link-hover-effect:hover::after {
+  transform: scale(1, 1)
+}
