DevOpsProjects#377: Added Docker configuration + Updated docs + refactoring

--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -1,5 +1,10 @@
 @import './header.scss';
 @import './home.scss';
+@import './about.scss';
+@import './documentation.scss';
+@import './support.scss';
+
+@import './sidConnect.scss';
 
 :root {
   --color-page-background: #fff;
