--- a/sid-landing-site/src/styles/header.scss
+++ b/sid-landing-site/src/styles/header.scss
@@ -1,4 +1,4 @@
-#header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,7 +43,7 @@
         align-items: center;
         font-size: 2.2rem;
         list-style-type: none;
-        padding: 1rem 0 1rem 1rem;
+        padding: 2px 0 2px 1rem;
         margin: 0;
         background-color: #fff;
         border-radius: 3px;
@@ -54,29 +54,6 @@
             white-space: nowrap;
             font-weight: 500;
             color: var(--color-main-text);
-        }
-
-        a.connect-icon {
-            position: relative;
-            border: 1px solid var(--color-logo-main);
-            color: var(--color-logo-main);
-            border-radius: 8px;
-            padding: 0.35em 78px 10px 1rem;
-        }
-
-        a.connect-icon:hover {
-            text-decoration: none;
-        }
-
-        a.connect-icon::after {
-            background-image: url('../assets/sid_logo.png');
-            background-size: 65px 36px;
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            width: 65px;
-            height: 36px;
-            content: '';
         }
     }
 }
