--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './about.scss';
 @import './documentation.scss';
 @import './support.scss';
+@import './notfound.scss';
 
 @import './sidConnect.scss';
 
@@ -55,6 +56,11 @@ code {
     monospace;
 }
 
+.content-hide {
+  position: absolute;
+  left: -1000px
+}
+
 .btn-hover-effect:hover {
   transform: scale(0.96);
 }
@@ -73,4 +79,36 @@ code {
 
 .link-hover-effect:hover::after {
   transform: scale(1, 1)
+}
+
+h2.page-title {
+  padding: 4rem 0;
+  font-size: 4.5rem;
+  font-weight: normal;
+  color: var(--color-main-brown);
+  white-space: nowrap;
+}
+
+h3.section-title {
+  padding: 4rem 0;
+  font-size: 3.5rem;
+  font-weight: normal;
+  color: var(--color-feature-title);
+  white-space: nowrap;
+}
+
+a.learn-more {
+  text-decoration: none;
+  color: var(--color-feature-title);
+  padding-bottom: 8px; 
+  border-bottom: 2px solid var(--color-main-brown);
+}
+
+a.learn-more:hover {
+  font-weight: 500;
+}
+
+a.learn-more::after {
+  content: ' \02192';
+  font-family: 'Montserrat', Arial;
 }
