DevOpsProjects#377: Added basic footer + made homepage text columns responsive

--- a/sid-landing-site/src/styles/header.scss
+++ b/sid-landing-site/src/styles/header.scss
@@ -4,9 +4,9 @@
     align-items: center;
     flex-wrap: wrap;
     align-content: center;
-    padding: 2rem 1rem 1rem 6rem;
+    padding: 2rem 1rem 1rem 4%;
     background-color: var(--color-main-backgroud);
-    border-bottom: 2px solid #7D7B79;
+    border-bottom: 2px solid var(--color-main-borderline);
 
     a{
         position: relative;
@@ -41,18 +41,15 @@
         justify-content: space-between;
         column-gap: 20px;
         align-items: center;
-        font-size: 2.2rem;
+        font-size: 2.4rem;
         list-style-type: none;
         padding: 2px 0 2px 1rem;
         margin: 0;
-        background-color: #fff;
         border-radius: 3px;
-        box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1);
 
         a {
             text-decoration: none;
             white-space: nowrap;
-            font-weight: 500;
             color: var(--color-main-text);
         }
     }
