--- a/sid-landing-site/src/styles/header.scss
+++ b/sid-landing-site/src/styles/header.scss
@@ -1,4 +1,4 @@
-.header {
+#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,8 +32,27 @@
         content: '';
     }
 
+    @media (max-width: 780px) {
+        h1 {
+            font-size: 4rem;
+        }
+
+        h1 a::after {
+            background-size: 90px 50px;
+            width: 90px;
+            height: 50px;
+        }
+    }
+
     nav {
         flex-grow: 1;
+        padding: 2px 0 2px 1rem;
+    }
+
+    nav.hamburger-menu {
+        padding-right: 1rem;
+        flex-grow: 1;
+        flex-basis: 100%;
     }
 
     ul {
@@ -43,7 +62,6 @@
         align-items: center;
         font-size: 2.4rem;
         list-style-type: none;
-        padding: 2px 0 2px 1rem;
         margin: 0;
         border-radius: 3px;
 
@@ -52,5 +70,29 @@
             white-space: nowrap;
             color: var(--color-main-text);
         }
+    }
+
+    nav.hamburger-menu ul {
+        flex-direction: column;
+        align-items: flex-start;
+
+        li {
+            padding-bottom: 1rem;
+        }
+    }
+
+    .btn-hamburger {
+        background-color: transparent;
+        padding: 6px 10px 5px 10px;
+        border: 1px solid var(--color-main-text);
+        border-radius: 3px;
+        cursor: pointer;
+        box-shadow: 2px 2px rgba(0, 0, 0, 0.1);
+    }
+    .btn-hamburger:hover {
+        border: 1px solid var(--color-main-brown);
+        path {
+            stroke: var(--color-main-brown);
+        } 
     }
 }
