DevOpsProjects#377: Style updates to hamburger menu

--- a/sid-landing-site/src/styles/header.scss
+++ b/sid-landing-site/src/styles/header.scss
@@ -79,6 +79,10 @@
         li {
             padding-bottom: 1rem;
         }
+
+        .item-sid-connect {
+            padding: 0.5rem 0;
+        }
     }
 
     .btn-hamburger {
