--- a/sid-landing-site/src/styles/home.scss
+++ b/sid-landing-site/src/styles/home.scss
@@ -75,6 +75,12 @@
         white-space: nowrap;
     }
 
+    @media (max-width: 780px) {
+        h3 {
+            font-size: 3rem;
+        }
+    }
+
     .feature-item-content {
         color: var(--color-feature-text);
         padding-bottom: 20px; 
