--- a/sid-landing-site/src/styles/header.scss
+++ b/sid-landing-site/src/styles/header.scss
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     align-content: center;
     padding: 2rem 1rem 1rem 4%;
-    background-color: var(--color-main-backgroud);
+    background-color: var(--color-main-background);
     border-bottom: 2px solid var(--color-main-borderline);
 
     a{
