--- a/sid-landing-site/src/styles/footerFeatures.scss
+++ b/sid-landing-site/src/styles/footerFeatures.scss
@@ -1,12 +1,12 @@
 #footer-features {
   display: flex;
   justify-content: space-between;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   color: var(--color-main-borderline);
   font-weight: 500;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem 0;
+  padding: 2rem 3rem;
 
   h3 {
       background-image: url('../assets/iqss_logo_small.png');
@@ -20,6 +20,21 @@
   .vcard span {
     display: inline-block;
     padding: .3rem 0;
+  }
+
+  .vcard-icons {
+    padding: 2rem 0;
+  }
+
+  .vcard-icons a {
+    display: inline-block;
+    background-color: #bfbfbf;
+    border: 1px solid #bfbfbf;
+    width: 49px;
+    height: 49px;
+    padding: 1px 0 0 1px;
+    border-radius: 50%;
+    margin-right: 20px;
   }
 
   .feature ul {
@@ -41,7 +56,6 @@
     text-decoration: none;
   }
 }
-
 
 @media (max-width: 900px) {
   #footer-features {
