--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import './media.scss';
+@import './hamburger.scss';
+@import './learnMoreLink.scss';
 @import './header.scss';
 @import './footer.scss';
 @import './footerFeatures.scss';
@@ -106,20 +108,4 @@ h3.section-title {
   font-weight: normal;
   color: var(--color-feature-title);
   white-space: nowrap;
-}
-
-a.learn-more {
-  text-decoration: none;
-  color: var(--color-feature-title);
-  padding-bottom: 8px; 
-  border-bottom: 2px solid var(--color-main-brown);
-}
-
-a.learn-more:hover {
-  font-weight: 500;
-}
-
-a.learn-more::after {
-  content: ' \02192';
-  font-family: 'Montserrat', Arial;
 }
