--- a/sid-landing-site/src/styles/footerFeatures.scss
+++ b/sid-landing-site/src/styles/footerFeatures.scss
@@ -4,9 +4,9 @@
   font-size: 1.8rem;
   color: var(--color-main-borderline);
   font-weight: 500;
-  max-width: 1200px;
+  //max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem 3rem;
+  padding: 2rem 5rem;
 
   h3 {
       background-image: url('../assets/iqss_logo_small.png');
