--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -14,14 +14,16 @@
 
 :root {
   --color-page-background: #fff;
-  --color-main-brown: #DF800C;
+  --color-main-brown: #DA6027;
+  --color-status-background: #EED0C0;
   --color-main-background: #F9F9F9;
-  --color-footer-background: #e6e6e6;
+  --color-footer-background: #000;
+  --color-footer-text: #fff;
   --color-main-borderline: #7D7B79;
   --color-main-text: #808080;
-  --color-feature-title: #215990;
+  --color-feature-title: #255A8E;
   --color-feature-text: #555;
-  --color-logo-main: #0BBCE3;
+  --color-logo-main: #009CD2;
 }
 
 html {
