--- a/sid-landing-site/src/styles/sidConnect.scss
+++ b/sid-landing-site/src/styles/sidConnect.scss
@@ -2,7 +2,7 @@ a.sid-connect {
     display: inline-block;
     font-size: 2.2rem;
     text-decoration: none;
-    padding: 0.35em 0 10px 1rem;
+    padding: 0.45em 7px 0.45em 1rem;
     border: 1px solid var(--color-logo-main);
     border-radius: 8px;
 
@@ -19,7 +19,7 @@ a.sid-connect {
         background-image: url('../assets/sid_logo.png');
         background-size: 65px 36px;
         position: absolute;
-        top: -3px;
+        top: -5px;
         right: 5px;
         width: 65px;
         height: 36px;
