DevOpsProjects#381: - Refactor HTML/CSS/JS to allow for configuration of launch buttons

--- a/dashboard/app/views/layouts/_footer.html.erb
+++ b/dashboard/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container-fluid" 
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-2 col-sm-4">
         <%= link_to "https://osc.github.io/Open-OnDemand/" do %>
@@ -34,5 +34,6 @@
               ) %>
         <% end %>
       </div>
+    </div>
   </div><!-- /.container -->
 </footer>
