--- a/dashboard/app/assets/stylesheets/application.css.scss
+++ b/dashboard/app/assets/stylesheets/application.css.scss
@@ -220,6 +220,7 @@ pre.motd-monospaced {
 @import "batch_connect/sessions";
 @import "batch_connect/session_contexts";
 @import "spinner";
+@import "quick_launch";
 @import "insufficient_quota";
 @import "insufficient_balance";
 @import "fa_shims";
