--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-6 col-md-3">
-  <div id="<%= launchButtonId %>" data-toggle="launch-button" data-url="<%= ws_sessions_path %>" data-reload-url="<%= batch_connect_sessions_path(format: :js) %>"
+  <div id="<%= launchButtonId %>" data-toggle="launch-button" data-url="<%= ws_sessions_path %>" data-reload-url="<%= batch_connect_sessions_path(r: root_url, format: :js) %>"
        class="launch-button">
     <div class="launch-button-spinner" style="display: none;">
       <div class="spinner-border" role="status"></div>
