--- a/dashboard/app/views/layouts/_footer.html.erb
+++ b/dashboard/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container-fluid" 
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-2 col-sm-4">
         <%= link_to "https://osc.github.io/Open-OnDemand/" do %>
@@ -13,28 +13,27 @@
         <% end %>
       </div>
       <div class="col-md-2 col-sm-4">
-        <%= link_to "https://osc.github.io/Open-OnDemand/" do %>
+        <%= link_to "https://vdi.rc.fas.harvard.edu/pun/sys/dashboard" do %>
           <%= image_tag(
-                "banquet.svg",
+                "fasrc_logo.jpg",
                 class: "footer-logo img-responsive center-block",
-                alt: "Powered by Evan Sarmiento",
+                alt: "FASRC",
                 height: "40",
                 style: "margin-bottom: 20px; max-height: 40px;"
               ) %>
         <% end %>
       </div>
       <div class="col-md-2 col-sm-4">
-
-        <%= link_to "https://osc.github.io/Open-OnDemand/" do %>
+        <%= link_to "https://www.iq.harvard.edu/" do %>
           <%= image_tag(
-                "hgtv.svg",
+                "iqss_logo.png",
                 class: "footer-logo img-responsive center-block",
-                alt: "Powered by HGTV",
+                alt: "IQSS",
                 height: "40",
                 style: "margin-bottom: 20px; max-height: 40px;"
               ) %>
         <% end %>
       </div>
-      <div class="col-md-2 col-sm-4"><img class="footer-logo center-block" src="https://www.iq.harvard.edu/files/harvard-iqss/files/iqsslogo_iqwebsite2019.png?m=1565725406"/ height=40 style="margin-bottom: 20px; max-height: 40px;"></div>
+    </div>
   </div><!-- /.container -->
 </footer>
