--- a/dashboard/app/views/layouts/nav/_develop_dropdown.html.erb
+++ b/dashboard/app/views/layouts/nav/_develop_dropdown.html.erb
@@ -5,9 +5,9 @@
   <ul class="dropdown-menu">
     <%= nav_link(t('dashboard.nav_restart_server'), "sync", restart_url) %>
     <%= nav_link(t('dashboard.nav_develop_docs'), "book", Configuration.developer_docs_url, target: "_blank") %>
-    <%= nav_link(products_title(:dev), "cog", products_path(type: "dev")) %>
+    <%= nav_link(products_title(:dev), "cog", products_path(type: "dev").gsub("/pun/dev", "/pun/sys")) %>
     <% if Configuration.app_sharing_enabled? %>
-      <%= nav_link(products_title(:usr), "share-alt", products_path(type: "usr")) %>
+      <%= nav_link(products_title(:usr), "share-alt", products_path(type: "usr").gsub("/pun/dev", "/pun/sys")) %>
     <% end %>
   </ul>
 </li>
