--- a/dashboard/app/views/layouts/nav/_group.html.erb
+++ b/dashboard/app/views/layouts/nav/_group.html.erb
@@ -8,8 +8,9 @@
         <% app.links.each do |link| %>
           <li>
             <%=
+              #LINK TO MAIN DASHBOARD APP INSTEAD OF THIS PASSENGER APP
               link_to(
-                link.url.to_s,
+                link.url.to_s.gsub("/pun/dev", "/pun/sys"),
                 title: link.title,
                 target: link.new_tab? ? "_blank" : nil
               ) do
