DevOpsProject#385 - Added Quick launch button for Remote Desktop + Using default partition for launch buttons

--- a/dashboard/app/assets/stylesheets/application.css.scss
+++ b/dashboard/app/assets/stylesheets/application.css.scss
@@ -210,7 +210,7 @@ pre.motd-monospaced {
 .navbar.navbar-inverse.navbar-static-top {
   padding: 5px;
   border-width: 0 0 3px;
-  border-color: #4e9bf4;
+  border-color: transparent;
 }
 // $fa-font-path: "fontawesome/fonts";
 @import "dashboard";
