--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -1,17 +1,20 @@
   <div class="col-sm-6 col-md-3">
-    <div id="<%= launchButtonId %>" data-toggle="launch-button" data-url="<%= ws_sessions_path %>" data-reload-url="<%= batch_connect_sessions_path(r: root_url, format: :js) %>"
+    <div id="<%= launchButtonId %>"
+         data-toggle="launch-button"
+         data-url="<%= ws_sessions_path %>"
+         data-reload-url="<%= batch_connect_sessions_path(r: root_url, format: :js) %>"
          class="launch-button">
       <div class="launch-button-spinner" style="display: none;">
         <div class="spinner-border" role="status"></div>
       </div>
 
       <div class="title text-center">cannon</div>
-      <div class="panel-body">
+      <div class="panel-body panel-image">
         <img src="<%= asset_url launchButton[:logo] %>" alt="Application logo" width="<%= launchButton[:logoWidth] || 200 %>" class="center-block"/>
       </div>
-      <div class="panel-body">
-        <p><%= launchButton[:p1] || "" %></p>
-        <p><%= launchButton[:p2] || "" %></p>
+      <div class="panel-body panel-text">
+        <p><%= launchButton[:p1] || "&nbsp;".html_safe %></p>
+        <p><%= launchButton[:p2] || "&nbsp;".html_safe %></p>
       </div>
     </div>
   </div>
