--- a/dashboard/app/views/quick_launch/index.html.erb
+++ b/dashboard/app/views/quick_launch/index.html.erb
@@ -20,7 +20,8 @@
   </div>
 
   <div class="row row-eq-height">
-    <%= render partial: "launch_button", locals: {launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view]}%>
+    <%= render partial: "launch_button", locals: {launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view]} if @launchButtons[:rstudio][:cluster]%>
+    <%= render partial: "launch_button", locals: {launchButtonId: "bc_desktop", launchButton: @launchButtons[:bc_desktop][:view]} if @launchButtons[:bc_desktop][:cluster]%>
 
     <%= render partial: "link_button", locals: {linkButtonId: "fasse"}%>
   </div>
