DevOpsProject#385 - Fixed typo on Sid site link

--- a/dashboard/app/views/layouts/nav/_sid_menu.html.erb
+++ b/dashboard/app/views/layouts/nav/_sid_menu.html.erb
@@ -1,15 +1,15 @@
 <li title="sid about">
-  <a href="http://sid.hardvard.edu/about">
+  <a href="http://sid.harvard.edu/about">
     <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> About</span>
   </a>
 </li>
 <li title="sid documentation">
-  <a href="http://sid.hardvard.edu/documentation">
+  <a href="http://sid.harvard.edu/documentation">
     <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> Documentation</span>
   </a>
 </li>
 <li title="sid support">
-  <a href="http://sid.hardvard.edu/support">
+  <a href="http://sid.harvard.edu/support">
     <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> Support</span>
   </a>
 </li>
