--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -1,4 +1,4 @@
-  <div class="col-sm-6 col-md-3">
+  <div class="col-xs-12 col-sm-6 col-md-3">
     <div id="<%= launchButtonId %>"
          data-toggle="launch-button"
          data-url="<%= ws_sessions_path %>"
@@ -10,7 +10,7 @@
 
       <div class="title text-center">cannon</div>
       <div class="panel-body panel-image">
-        <img src="<%= asset_url launchButton[:logo] %>" alt="Application logo" width="<%= launchButton[:logoWidth] || 200 %>" class="center-block"/>
+        <img src="<%= asset_url launchButton[:logo] %>" alt="Application logo" width="<%= launchButton[:logoWidth] || 200 %>" class="center-block"  style="<%= launchButton[:style] || '' %>"/>
       </div>
       <div class="panel-body panel-text">
         <p><%= launchButton[:p1] || "&nbsp;".html_safe %></p>
