--- a/dashboard/app/views/quick_launch/_link_button.html.erb
+++ b/dashboard/app/views/quick_launch/_link_button.html.erb
@@ -1,11 +1,15 @@
- <div class="col-sm-6 col-md-3">
-    <div id="<%= linkButtonId %>" class="launch-button link-button">
-      <a href="#">
-      <div class="title text-center">fas se</div>
-      <div class="link-button-text">
-        Connect to FAS SE to work with Level 3 data
+<div class="<%= button_column_classes %>">
+  <div id="<%= launchButtonId %>" class="launch-button">
+    <a href="<%= launchButton[:url] || "#" %>" target="_blank">
+      <div class="title text-center">cannon</div>
+      <div class="panel-body panel-image">
+        <img src="<%= asset_url launchButton[:logo] %>" alt="Application logo" width="<%= launchButton[:logoWidth] || 200 %>" class="center-block"  style="<%= launchButton[:style] || '' %>"/>
       </div>
-      </a>
-    </div>
+      <div class="panel-body panel-text">
+        <p><%= launchButton[:p1] || "&nbsp;".html_safe %></p>
+        <p><%= launchButton[:p2] || "&nbsp;".html_safe %></p>
+      </div>
+    </a>
   </div>
+</div>
 
