--- a/dashboard/app/views/quick_launch/index.html.erb
+++ b/dashboard/app/views/quick_launch/index.html.erb
@@ -20,11 +20,13 @@
   </div>
 
   <div class="row row-eq-height">
-    <%= render partial: "launch_button", locals: {launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view]} if @launchButtons[:rstudio][:cluster]%>
-    <%= render partial: "launch_button", locals: {launchButtonId: "rdesktop", launchButton: @launchButtons[:rdesktop][:view]} if @launchButtons[:rdesktop][:cluster]%>
-    <%= render partial: "launch_button", locals: {launchButtonId: "jupiterlab", launchButton: @launchButtons[:jupiterlab][:view]} if @launchButtons[:jupiterlab][:cluster]%>
+    <%= render partial: "launch_button", locals: {launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view]} if @launchButtons[:rstudio][:cluster] %>
+    <%= render partial: "launch_button", locals: {launchButtonId: "rdesktop", launchButton: @launchButtons[:rdesktop][:view]} if @launchButtons[:rdesktop][:cluster] %>
+    <%= render partial: "launch_button", locals: {launchButtonId: "jupiterlab", launchButton: @launchButtons[:jupiterlab][:view]} if @launchButtons[:jupiterlab][:cluster] %>
 
-    <%= render partial: "link_button", locals: {linkButtonId: "fasse"}%>
+    <%= render partial: "link_button", locals: {launchButtonId: "terminal", launchButton: @launchButtons[:terminal][:view]} if @launchButtons[:terminal][:view][:url] %>
+
+    <%= render partial: "fasse_button" %>
   </div>
 </div>
 
