DevOpsProjects#391: Removed MySessions from navigation + fixed navigation path for generic app deployments

--- a/dashboard/app/views/quick_launch/_help.html.erb
+++ b/dashboard/app/views/quick_launch/_help.html.erb
@@ -1,29 +1,58 @@
 <hr />
 
 <div id="help-container" class="ood-appkit markdown">
-  <h2>Documentation and Training</h2>
+  <h2>Welcome to Sid, the Social Sciences Dashboard for the FAS Research Computing Cluster.</h2>
+
   <p>
-    Visit the <a href="#">Social Science Computing documentation</a> to learn more about running Social Science computing applications on this cluster.
+  The Computing Cluster is a resource for the research community, hosted by Research Computing at Harvard University's Faculty of Arts and Sciences, with support for Social Science provided by the Institute for Quantitative Social Science.
   </p>
+
   <p>
-    Visit <a href="#">IQSS Data Science Services documentation</a> for workshops, demos, and tutorials:
+  From this Dashboard you can submit your jobs, check running jobs, and open interactive graphical sessions to run your favorite applications.
+  </p>
+
+  <p>
+  Click an application below above to launch the default configuration, or select from the menu above for more options.
+  </p>
+
+  <p>
+    Some examples of the things you can do from this dashboard:
   <ul>
-    <li><a href="#">Run Batch Jobs in different languages</a></li>
-    <li><a href="#">Create your own packages in R</a></li>
-    <li><a href="#">Python, R, and Stata workshop materials</a></li>
+    <li>Open an interactive remote desktop session to a compute node</li>
+    <li>Run Jupyter Notebooks</li>
+    <li>Run Rstudio Server sessions</li>
+    <li>Browse and edit your files</li>
+    <li>Open a terminal connection to a login node</li>
   </ul>
   </p>
+
+  <h2>Documentation and Training</h2>
   <p>
-    Refer to the FASRC <a href="#">main documentation</a> to learn more:
+  Check out our documentation for the Virtual Desktop Interface at <a href="https://docs.rc.fas.harvard.edu/kb/virtual-desktop/">this page.</a>
+  </p>
+  <p>
+    Refer to the FASRC <a href="https://docs.rc.fas.harvard.edu/">documentation</a> to learn more on:
   <ul>
-    <li><a href="#">Running jobs on the cluster and requesting resources</a></li>
-    <li><a href="#">How to check your running jobs and fairshare</a></li>
-    <li><a href="#">Access scientific software in your jobs</a></li>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/running-jobs/">Running jobs on the cluster and requesting resources</a></li>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/convenient-slurm-commands/#Controlling_jobs">How to check your running jobs</a> and
+      <a href="https://docs.rc.fas.harvard.edu/kb/fairshare/">fairshare</a>
+    </li>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/software/">Access scientific software in your jobs</a></li>
     <li><a href="#">Current System Status, planned maintenance, and downtime</a></li>
   </ul>
   </p>
   <p>
-    If you need help, please contact us following <a href="#">these instructions</a>, or come at visit us at our <a href="#">office hours sessions.</a><br />
-    We host training sessions both at on site and online. Please refer to our <a href="#">updated calendar</a> for more information.
+    If you need help, please contact us following <a href="https://docs.rc.fas.harvard.edu/kb/support/">these instructions</a>, or come at visit us at our <a href="https://www.rc.fas.harvard.edu/training/office-hours/">office hours sessions.</a>
+  </p>
+  <p>
+    We host training sessions regularly! Please refer to our <a href="https://www.rc.fas.harvard.edu/upcoming-training/">calendar</a> for more information.
+  </p>
+
+  <h2>System Status and Planned Downtime</h2>
+  <p>
+    Please refer to <a href="https://status.rc.fas.harvard.edu/">https://status.rc.fas.harvard.edu/</a> to get the latest information on the status of the system.
+  </p>
+  <p>
+    You can find information on our <a href="https://www.rc.fas.harvard.edu/maintenance">monthly planned maintenance window at this page.</a>
   </p>
 </div>
