--- a/dashboard/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/app/views/quick_launch/_fasse_button.html.erb
@@ -5,6 +5,9 @@
       <div class="link-button-text">
         Connect to FAS SE to work with Level 3 data
       </div>
+      <p>
+        You must be connected to the FASRC VPN
+      </p>
     </a>
   </div>
 </div>
