--- a/dashboard/app/views/quick_launch/_help.html.erb
+++ b/dashboard/app/views/quick_launch/_help.html.erb
@@ -28,31 +28,30 @@
 
   <h2>Documentation and Training</h2>
   <p>
-  Check out our documentation for the Virtual Desktop Interface at <a href="https://docs.rc.fas.harvard.edu/kb/virtual-desktop/">this page.</a>
+  Check out our documentation for the Virtual Desktop Interface at <a href="https://docs.rc.fas.harvard.edu/kb/virtual-desktop/" target="_blank">this page.</a>
   </p>
   <p>
-    Refer to the FASRC <a href="https://docs.rc.fas.harvard.edu/">documentation</a> to learn more on:
+    Refer to the FASRC <a href="https://docs.rc.fas.harvard.edu/" target="_blank">documentation</a> to learn more on:
   <ul>
-    <li><a href="https://docs.rc.fas.harvard.edu/kb/running-jobs/">Running jobs on the cluster and requesting resources</a></li>
-    <li><a href="https://docs.rc.fas.harvard.edu/kb/convenient-slurm-commands/#Controlling_jobs">How to check your running jobs</a> and
-      <a href="https://docs.rc.fas.harvard.edu/kb/fairshare/">fairshare</a>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/running-jobs/" target="_blank">Running jobs on the cluster and requesting resources</a></li>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/convenient-slurm-commands/#Controlling_jobs" target="_blank">How to check your running jobs</a> and
+      <a href="https://docs.rc.fas.harvard.edu/kb/fairshare/" target="_blank">fairshare</a>
     </li>
-    <li><a href="https://docs.rc.fas.harvard.edu/kb/software/">Access scientific software in your jobs</a></li>
-    <li><a href="#">Current System Status, planned maintenance, and downtime</a></li>
+    <li><a href="https://docs.rc.fas.harvard.edu/kb/software/" target="_blank">Access scientific software in your jobs</a></li>
   </ul>
   </p>
   <p>
-    If you need help, please contact us following <a href="https://docs.rc.fas.harvard.edu/kb/support/">these instructions</a>, or come at visit us at our <a href="https://www.rc.fas.harvard.edu/training/office-hours/">office hours sessions.</a>
+    If you need help, please contact us following <a href="https://docs.rc.fas.harvard.edu/kb/support/" target="_blank">these instructions</a>, or come at visit us at our <a href="https://www.rc.fas.harvard.edu/training/office-hours/" target="_blank">office hours sessions.</a>
   </p>
   <p>
-    We host training sessions regularly! Please refer to our <a href="https://www.rc.fas.harvard.edu/upcoming-training/">calendar</a> for more information.
+    We host training sessions regularly! Please refer to our <a href="https://www.rc.fas.harvard.edu/upcoming-training/" target="_blank">calendar</a> for more information.
   </p>
 
   <h2>System Status and Planned Downtime</h2>
   <p>
-    Please refer to <a href="https://status.rc.fas.harvard.edu/">https://status.rc.fas.harvard.edu/</a> to get the latest information on the status of the system.
+    Please refer to <a href="https://status.rc.fas.harvard.edu/" target="_blank">https://status.rc.fas.harvard.edu/</a> to get the latest information on the status of the system.
   </p>
   <p>
-    You can find information on our <a href="https://www.rc.fas.harvard.edu/maintenance">monthly planned maintenance window at this page.</a>
+    You can find information on our <a href="https://www.rc.fas.harvard.edu/maintenance" target="_blank">monthly planned maintenance window at this page.</a>
   </p>
 </div>
