--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -15,6 +15,7 @@
     <div class="panel-body panel-text">
       <p><%= launchButton[:p1] || "&nbsp;".html_safe %></p>
       <p><%= launchButton[:p2] || "&nbsp;".html_safe %></p>
+      <p><%= launchButton[:p3] || "&nbsp;".html_safe %></p>
     </div>
   </div>
 </div>
