--- a/dashboard/app/views/quick_launch/index.html.erb
+++ b/dashboard/app/views/quick_launch/index.html.erb
@@ -19,13 +19,12 @@
     </div>
   </div>
 
-  <div class="alert pull-right" role="alert">
-    <a class="btn btn-primary" href="<%= sys_url(batch_connect_sessions_path) %>" role="button">
+  <div id="<%= view_interactive_sessions_link_container_id %>" style="<%= show_more_sessions_link?(@sessions.length) ? "" : "display:none" %>">
+    <a href="<%= sys_url(batch_connect_sessions_path) %>" role="button">
       <i class="fas fa-window-restore" aria-hidden="true"></i>
-      <span><%= t('dashboard.nav_sessions') %> <%= number_of_sessions_text(@sessions.length) %></span>
+      <span>View all my Interactive sessions <%= number_of_sessions_text(@sessions.length) %></span>
     </a>
   </div>
-  <div class="clearfix"></div>
 
   <div class="row row-eq-height">
     <%= render partial: "launch_button", locals: { launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view] } if @launchButtons[:rstudio][:cluster] %>
